force-app/main/default/objects/pse__Default_Assignments_for_Jira_Settings__c/fields/pse__Notification_Recipients__c.field-meta.xml
<CustomField>
    <fullName>pse__Notification_Recipients__c</fullName>
    <description>Specifies the notification recipients for Default Assignments for Jira batch notifications sent via Chatter, email or tasks. The value is a list of email addresses separated by semicolons (;). If left blank, the user who started the process is notified.</description>
    <inlineHelpText>Specifies the notification recipients for Default Assignments for Jira batch notifications sent via Chatter, email or tasks. The value is a list of email addresses separated by semicolons (;). If left blank, the user who started the process is notified.</inlineHelpText>
    <label>Notification Recipients</label>
    <type>TextArea</type>
</CustomField>