force-app/main/default/objects/pse__Default_Assignments_for_Jira_Settings__c/fields/pse__Notifications_by_Chatter__c.field-meta.xml
<CustomField>
    <fullName>pse__Notifications_by_Chatter__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If selected, notifications from Default Assignments for Jira batch processes are sent via Chatter to recipients listed in the Notification Recipients field. This is deselected by default.</description>
    <inlineHelpText>If selected, notifications from Default Assignments for Jira batch processes are sent via Chatter to recipients listed in the Notification Recipients field. This is deselected by default.</inlineHelpText>
    <label>Notifications by Chatter</label>
    <type>Checkbox</type>
</CustomField>