force-app/main/default/objects/pse__Default_Assignments_for_Jira_Settings__c/fields/pse__Notifications_by_Email__c.field-meta.xml
<CustomField>
    <fullName>pse__Notifications_by_Email__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If selected, notifications from Default Assignments for Jira batch processes are sent via email to recipients listed in the Notification Recipients field. This is deselected by default.</description>
    <inlineHelpText>If selected, notifications from Default Assignments for Jira batch processes are sent via email to recipients listed in the Notification Recipients field. This is deselected by default.</inlineHelpText>
    <label>Notifications by Email</label>
    <type>Checkbox</type>
</CustomField>